--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -4,7 +4,7 @@
 .site-footer {
     position: fixed;
     width: 100%;
-    bottom: 1rem;
+    bottom: 1.5rem;
     z-index: 10;
     display: flex;
     justify-content: center;
@@ -40,7 +40,8 @@
     }
 
     .site-footer {
-        justify-content: space-around;
+        justify-content: space-between;
+        width: 96%;
     }
 
     .footer-desktop ul {
