--- a/sass/_header-nav.scss
+++ b/sass/_header-nav.scss
@@ -18,7 +18,6 @@
 .site-nav img {
     height: 3.2rem;
     padding: 1rem;
-    vertical-align: bottom;
 }
 
 .site-nav a img {
@@ -44,7 +43,7 @@
     flex-direction: column;
     justify-content: space-between;
     width: 18.3rem;
-    height: 97vh;
+    height: 98.5vh;
     margin: 0 0.5rem;
     left: -100%;
     background-color: $why-bg-color;
@@ -66,13 +65,13 @@
         font-size: 0.9rem;
     }
 
-    a:hover {
-        opacity: 0.8;
-    }
-
     li {
         list-style-type: none;
         padding: 1.1rem;
+    }
+
+    li:hover {
+        opacity: 0.8;
     }
 
     li:last-of-type {
@@ -105,7 +104,7 @@
     }
 
     li {
-        padding: 5px;
+        padding: 2px;
     }
 }
 
@@ -134,6 +133,7 @@
     .site-nav-top {
         display: flex;
         gap: 1rem;
+        margin-top: 0.5rem;
     }
 
     .site-nav-list img,
@@ -170,7 +170,7 @@
     }
 
     span.active {
-        opacity: 1 !important;
+        opacity: 1;
     }
 
     li a {
