--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -118,8 +118,8 @@
 
 .more-docs button {
     display: flex;
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    // align-items: center;
     border-radius: 2rem;
     z-index: 99;
     width: 12em;
@@ -173,8 +173,8 @@
 }
 
 .more-details button {
-    justify-content: center;
-    align-items: center;
+    // justify-content: center;
+    // align-items: center;
     border-radius: 2rem;
     z-index: 99;
     width: 12em;
