Fixed side-nav display issue

--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -105,15 +105,16 @@
 
 .more-docs {
     display: flex;
-    flex-direction: column;
+    // flex-direction: column;
+    flex-wrap: wrap;
     margin-top: 2em;
     gap: 1em;
 }
 
 .more-docs button {
     display: flex;
-    // justify-content: center;
-    // align-items: center;
+    justify-content: center;
+    align-items: center;
     border-radius: 2rem;
     z-index: 99;
     width: 12em;
