--- a/styles/styles.css
+++ b/styles/styles.css
@@ -464,4 +464,25 @@ button:hover {
   color: rgb(255, 255, 255);
 }
 
+.stay {
+  display: flex;
+  flex-direction: column;
+  background-color: rgb(229, 236, 252);
+  color: rgb(42, 94, 204);
+}
+
+.get-updates button {
+  border-radius: 2rem;
+  z-index: 99;
+  width: 12em;
+  height: 3.8em;
+  background-color: rgb(25, 86, 179);
+  border: 0rem;
+}
+
+.get-updates a {
+  color: aliceblue;
+  font-size: 1rem;
+  line-height: 1.5rem;
+}
 /*# sourceMappingURL=styles.css.map */
