added bold text for button

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -484,5 +484,6 @@ button:hover {
   color: aliceblue;
   font-size: 1rem;
   line-height: 1.5rem;
+  font-weight: bold;
 }
 /*# sourceMappingURL=styles.css.map */
