--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -184,3 +184,27 @@
 }
 
 // Stay Updated
+
+.stay {
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(229, 236, 252);
+    color: rgb(42, 94, 204);
+}
+
+.get-updates button {
+    border-radius: 2rem;
+    z-index: 99;
+    width: 12em;
+    height: 3.8em;
+    background-color: rgb(25, 86, 179);
+    border: 0rem;
+    margin-left: -19.125rem;
+}
+
+.get-updates a {
+    color: aliceblue;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    font-weight: bold;
+}
