changed class id

--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -185,7 +185,7 @@
 
 // Stay Updated
 
-.stay {
+.stay-updated {
     display: flex;
     flex-direction: column;
     background-color: rgb(229, 236, 252);
