--- a/styles/styles.css
+++ b/styles/styles.css
@@ -464,7 +464,7 @@ button:hover {
   color: rgb(255, 255, 255);
 }
 
-.stay {
+.stay-updated {
   display: flex;
   flex-direction: column;
   background-color: rgb(229, 236, 252);
