--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -9,6 +9,8 @@ $hamburger-hover-color: rgb(208, 218, 242);
 $about-bg-color: rgb(33, 80, 190);
 $about-e-symbol: rgb(131, 185, 238);
 $design-bg-color: rgb(20, 138, 145);
+$stay-bg-color: rgb(229, 236, 252);
+$stay-button-color: rgb(25, 86, 179);
 
 // Text Colors
 $home-font-color: rgb(28, 83, 189);
@@ -16,6 +18,7 @@ $home-nav-color: rgb(26, 73, 181);
 $design-font-color: rgb(19, 25, 44);
 $white-font-color: rgb(255, 255, 255);
 $grey-font-color: rgb(138, 140, 149);
+$stay-font-color: rgb(42, 94, 204);
 
 // Fonts
 $main-font: "Roboto", sans-serif;
