--- a/sass/_footer.scss
+++ b/sass/_footer.scss
@@ -12,6 +12,7 @@
 
     li {
         list-style: none;
+        font-weight: 350;
     }
 
     a:hover {
@@ -27,6 +28,7 @@
         align-items: center;
         gap: 1.5rem;
         margin: 0;
+        padding: 0;
     }
 
     .footer-desktop {
@@ -41,13 +43,13 @@
 
     .site-footer {
         justify-content: space-between;
-        width: 96%;
+        width: 95%;
     }
 
     .footer-desktop ul {
         display: flex;
         align-items: center;
-        gap: 1.8rem;
+        gap: 1.5rem;
         margin: 0;
     }
 
