--- a/sass/_header-nav.scss
+++ b/sass/_header-nav.scss
@@ -6,8 +6,9 @@
     z-index: 10;
     display: flex;
     flex-direction: row-reverse;
-    left: 1.2rem;
-    top: 1.3rem;
+    align-items: center;
+    left: 0.6rem;
+    top: 0.6rem;
     transition: left 0.5s ease;
 }
 
@@ -15,9 +16,10 @@
     opacity: 0.8;
 }
 
-.site-nav img {
-    height: 3.2rem;
+.site-nav a img {
+    height: 3.1rem;
     padding: 1rem;
+    margin: 0;
 }
 
 .site-nav a img {
@@ -27,13 +29,17 @@
 .nav-btn {
     border: none;
     background-color: transparent;
+    margin: 1rem 0.8rem 1rem;
+    padding: 0.4rem 0.5rem;
+}
+
+.nav-btn img {
+    height: 1rem;
 }
 
 .nav-btn:hover {
     background-color: $hamburger-hover-color;
     border-radius: 50%;
-    padding: 0;
-    margin: 0 0.5rem;
 }
 
 // Toggle menu
@@ -92,6 +98,7 @@
         border-bottom: $border-bottom-color solid 1px;
         padding-left: 0;
         margin-right: 0.5rem;
+        font-weight: 350;
     }
 }
 
@@ -115,15 +122,15 @@
     }
 
     .site-nav {
-        left: 3rem;
-        top: 1.3rem;
+        left: 2.4rem;
+        top: 1rem;
     }
 
     .site-nav-list {
         background-color: transparent;
         transition: none;
-        left: 10rem;
-        top: 0.5rem;
+        left: 7.8rem;
+        top: 0.3rem;
 
         a {
             color: $home-nav-color;
@@ -154,45 +161,59 @@
 .side-nav {
     position: fixed;
     z-index: 10;
-    right: 1.5rem;
+    right: 1.8rem;
     text-align: end;
     display: flex;
     height: 100%;
     align-items: center;
 
+    span {
+        visibility: hidden;
+    }
+
     li {
         list-style: none;
-        padding: 8px;
+        padding: 0.2rem;
     }
 
     li a {
         opacity: 0.8;
-        color: $home-nav-color;
-        padding: 10px;
-        font-size: 0.8rem;
-        font-weight: 400;
-        cursor: default;
-    }
-
-    li a:hover {
-        color: $white-font-color;
-        font-weight: bold;
+        font-size: 0.7rem;
     }
 
     li a::after {
         content: "";
-        height: 3rem;
         background-color: $home-nav-color;
         position: relative;
-        padding: 2px;
-        margin-left: 0.5rem;
+        padding: 1px;
         border-radius: 2rem;
         cursor: pointer;
     }
 
-    @media (max-width: 48rem) {
+    @media (min-width: 48rem) {
         span {
-            display: none;
+            visibility: visible;
+        }
+
+        li {
+            padding: 0.5rem;
+        }
+
+        li a {
+            color: $home-nav-color;
+            font-size: 0.9rem;
+            font-weight: 400;
+            cursor: default;
+        }
+
+        li a:hover {
+            color: $white-font-color;
+            font-weight: bold;
+        }
+
+        li a::after {
+            padding: 3px 2px;
+            margin-left: 0.5rem;
         }
     }
 }
