--- a/sass/_mixins.scss
+++ b/sass/_mixins.scss
@@ -18,7 +18,7 @@
     position: relative;
     overflow: hidden;
     margin: 1rem 0.5rem;
-    padding: 5rem 0;
+    padding: 0 2rem 0 1.5rem;
     scroll-snap-align: start;
     border-radius: 1.5rem;
 }
@@ -26,14 +26,14 @@
 %article-layout {
     position: relative;
     z-index: 2;
-    width: $article-width-mobile;
+    // width: $article-width-mobile;
 }
 
 %bg-symbol-mobile {
     position: absolute;
     width: 90%;
     z-index: 1;
-    right: -10rem;
-    top: -4rem;
+    right: -45%;
+    top: -9%;
     transform: rotate(-10deg);
 }
