--- a/sass/_sections.scss
+++ b/sass/_sections.scss
@@ -15,9 +15,10 @@
     @media (min-width: 30em) {
         img {
             width: 80%;
-            z-index: 1;
-            right: -17rem;
-            top: -5rem;
+            // right: -17rem;
+            // top: -5rem;
+            right: -25%;
+            top: -13%;
             transform: rotate(-5deg);
         }
     }
@@ -30,13 +31,17 @@
         img {
             width: 50%;
         }
-    }
 
-    @media (min-width: 64rem) {
-        p {
-            margin-right: $text-margin;
+        h2 {
+            margin: 1.5rem 0;
         }
     }
+
+    // @media (min-width: 64rem) {
+    //     p {
+    //         margin-right: $text-margin;
+    //     }
+    // }
 }
 
 .section.pushed {
@@ -101,6 +106,10 @@
     flex-direction: column;
     background-color: $about-bg-color;
     color: $white-font-color;
+
+    p {
+        font-weight: 300;
+    }
 }
 
 .more-docs {
@@ -148,8 +157,11 @@
     background-color: $why-bg-color;
     color: $white-font-color;
 
+    h2 {
+    }
     p {
         opacity: 0.8;
+        font-weight: 300;
     }
 }
 
