--- a/styles/styles.css
+++ b/styles/styles.css
@@ -26,6 +26,7 @@ body,
 h1,
 h2 {
   font-family: "Roboto", sans-serif;
+  line-height: 1.1;
 }
 
 h2 {
@@ -66,15 +67,14 @@ button:hover {
 .section .text-content {
   position: relative;
   z-index: 2;
-  width: 90%;
 }
 
 .section img {
   position: absolute;
   width: 90%;
   z-index: 1;
-  right: -10rem;
-  top: -4rem;
+  right: -45%;
+  top: -9%;
   transform: rotate(-10deg);
 }
 
@@ -326,16 +326,15 @@ button:hover {
   position: relative;
   overflow: hidden;
   margin: 1rem 0.5rem;
-  padding: 5rem 0;
+  padding: 0 2rem 0 1.5rem;
   scroll-snap-align: start;
   border-radius: 1.5rem;
 }
 @media (min-width: 30em) {
   .section img {
     width: 80%;
-    z-index: 1;
-    right: -17rem;
-    top: -5rem;
+    right: -25%;
+    top: -13%;
     transform: rotate(-5deg);
   }
 }
@@ -346,10 +345,8 @@ button:hover {
   .section img {
     width: 50%;
   }
-}
-@media (min-width: 64rem) {
-  .section p {
-    margin-right: 4rem;
+  .section h2 {
+    margin: 1.5rem 0;
   }
 }
 
@@ -409,6 +406,9 @@ button:hover {
   background-color: rgb(33, 80, 190);
   color: rgb(255, 255, 255);
 }
+.about p {
+  font-weight: 300;
+}
 
 .more-docs {
   display: flex;
@@ -455,6 +455,7 @@ button:hover {
 }
 .why p {
   opacity: 0.8;
+  font-weight: 300;
 }
 
 .design {
