--- a/styles/styles.css
+++ b/styles/styles.css
@@ -472,17 +472,19 @@ button:hover {
 }
 
 .get-updates button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   border-radius: 2rem;
   z-index: 99;
   width: 12em;
   height: 3.8em;
   background-color: rgb(25, 86, 179);
   border: 0rem;
-  margin-left: -19.125rem;
 }
 
 .get-updates a {
-  color: aliceblue;
+  color: rgb(255, 255, 255);
   font-size: 1rem;
   line-height: 1.5rem;
   font-weight: bold;
