changed styles for the logo, added hover effects to buttons

--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -7,10 +7,10 @@ $why-logo-color: rgb(40, 48, 78);
 $border-bottom-color: rgb(68, 71, 85);
 $hamburger-hover-color: rgb(208, 218, 242);
 $about-bg-color: rgb(33, 80, 190);
-$about-e-symbol: rgb(131, 185, 238);
 $design-bg-color: rgb(20, 138, 145);
 $stay-bg-color: rgb(229, 236, 252);
 $stay-button-color: rgb(25, 86, 179);
+$design-logo-color: rgb(66, 97, 101);
 
 // Text Colors
 $home-font-color: rgb(28, 83, 189);
