--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,21 +1,22 @@
 // Colors
 $html-bg-color: rgb(255, 255, 255);
+$border-bottom-color: rgb(68, 71, 85);
+$hamburger-hover-color: rgb(208, 218, 242);
 $home-bg-color: rgb(225, 234, 249);
 $home-go-down-button-hover: rgb(87, 128, 207);
 $why-bg-color: rgb(21, 25, 43);
-$why-logo-color: rgb(40, 48, 78);
-$border-bottom-color: rgb(68, 71, 85);
-$hamburger-hover-color: rgb(208, 218, 242);
 $about-bg-color: rgb(33, 80, 190);
 $design-bg-color: rgb(20, 138, 145);
+$design-logo-color: brightness(0) saturate(100%) invert(40%) sepia(45%)
+    saturate(350%) hue-rotate(150deg) brightness(82%) contrast(90%);
 $stay-bg-color: rgb(229, 236, 252);
 $stay-button-color: rgb(25, 86, 179);
-$design-logo-color: rgb(66, 97, 101);
 
 // Text Colors
 $home-font-color: rgb(28, 83, 189);
 $home-nav-color: rgb(26, 73, 181);
-$design-font-color: rgb(19, 25, 44);
+$design-header-color: rgb(19, 25, 44);
+$design-font-color: rgb(35, 44, 71);
 $white-font-color: rgb(255, 255, 255);
 $grey-font-color: rgb(138, 140, 149);
 $stay-font-color: rgb(42, 94, 204);
@@ -33,15 +34,12 @@ $medium-font-weight: 400;
 $bold-font-weight: 500;
 
 // Article Layouts
-// $article-width-mobile: 80%;
 $article-width-desktop: 38rem;
-// $text-margin: 4rem;
 
 // Media Query Breakpoints
 $mobileLarge: 30em;
 $tablet: 48em;
 $laptop: 64em;
-$laptopLarge: 120em;
 
 // Utility variables
 $link-hover-selector: "&:hover, &:active";
