--- a/sass/_typography.scss
+++ b/sass/_typography.scss
@@ -8,6 +8,16 @@ h2 {
     line-height: $line-height-header;
 }
 
+h1 {
+    font-size: 3.75rem;
+    font-weight: bold;
+    margin-bottom: 0.5rem;
+
+    @include mq($laptop) {
+        font-size: 6rem;
+    }
+}
+
 h2 {
     font-size: 2.3rem;
     font-weight: $medium-font-weight;
